--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -17,6 +17,7 @@
     "browserify": "^14.5.0",
     "child-process": "^1.0.2",
     "gulp": "^3.9.1",
+    "gulp-bro": "^1.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.1",
