--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -4,7 +4,8 @@
   "description": "{{cookiecutter.description}}",
   "main": "app/js/app.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "gulp"
   },
   "author": "{{cookiecutter.author_name}}",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "gulp-bro": "^1.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
